force-app/main/default/objects/Additional_Information_Historical_Event__c/Additional_Information_Historical_Event__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyAdditionalInformationHistoricalEventV2</description>
    <label>Additional Information Historical  Event</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company Additional Info Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Information Historical  Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>