force-app/main/default/objects/Additional_Information_Historical_Event__c/fields/Creditsafe_Company_Additional_Info_DE__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Additional_Info_DE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeCompanyAdditionalInformationDEAdditionalInformationV2</description>
    <label>Creditsafe Company Additional Info DE</label>
    <referenceTo>Creditsafe_Company_Additional_Info_DE__c</referenceTo>
    <relationshipLabel>Additional Information Historical  Event</relationshipLabel>
    <relationshipName>Additional_Information_Historical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>