force-app/main/default/objects/Additional_Information_Historical_Event__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date of the event.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>