force-app/main/default/objects/Additional_Information_Historical_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of event</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>