force-app/main/default/objects/Additional_Information_Historical_Event__c/recordTypes/DE_Historical_Event.recordType-meta.xml
<RecordType>
    <fullName>DE_Historical_Event</fullName>
    <active>true</active>
    <label>DE Historical Event</label>
</RecordType>