force-app/main/default/objects/Additional_Information_Historical_Event__c/recordTypes/NL_Historical_Event.recordType-meta.xml
<RecordType>
    <fullName>NL_Historical_Event</fullName>
    <active>true</active>
    <label>NL Historical Event</label>
</RecordType>